# indoor_slam

./: .clangd  .gitignore  README.md  compile_commands.json  frames_2026-05-19_18.17.01.gv  start.sh
.omc/: project-memory.json
.omc/sessions/: 226aa8d7-e84c-4c74-9c9a-a06776e8d925.json  6d642584-896e-4f21-98dc-559f29df1468.json
.omc/state/: agent-replay-10e07d6c-0eda-4b9c-82e1-068e21bd695b.jsonl  agent-replay-6d642584-896e-4f21-98dc-559f29df1468.jsonl  subagent-tracking.json
.omc/state/sessions/10e07d6c-0eda-4b9c-82e1-068e21bd695b/: session-started.json
.omc/state/sessions/6d642584-896e-4f21-98dc-559f29df1468/: session-started.json
maps/: indoor_map.yaml  indoor_map_cropped.pgm  indoor_map_cropped.yaml  indoor_map_no_trail.pgm  indoor_map_no_trail.yaml  indoor_map_no_trail_strict.yaml
maps/PCD/: scans.pcd
src/Point-LIO/: CMakeLists.txt
src/Point-LIO/config/: avia.yaml  mid360.yaml
src/Point-LIO/include/: timing_utils.h
src/Point-LIO/src/: IMU_Processing.cpp  laserMapping.cpp  li_initialization.cpp  parameters.cpp  parameters.h  preprocess.cpp
src/bxi_nav/: CMakeLists.txt  package.xml
src/bxi_nav/config/: nav2_params.yaml  point_lio_mid360_nav.yaml
src/bxi_nav/include/nav/: indoor_nav_goal.hpp
src/bxi_nav/launch/: indoor_navigation_launch.py  nav2_navigation_launch.py
src/bxi_nav/maps/: maps.pgm  maps.yaml
src/bxi_nav/src/: main.cpp  terrain_analysis.cpp
src/livox_ros_driver2/config/: MID360s_config.json
src/pid_path_follower/: CMakeLists.txt  package.xml  pid_path_follower_plugin.xml
src/pid_path_follower/include/pid_path_follower/: pid_path_follower.hpp
src/pid_path_follower/src/: pid_path_follower.cpp
src/small_gicp_relocalization/: CMakeLists.txt
src/small_gicp_relocalization/include/small_gicp_relocalization/: small_gicp_relocalization.hpp
src/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
src/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
tools/: indoor_wall_only.pgm  map_ws_streamer.py  map_yaml_from_pgm.py  pcd_to_occupancy_grid.py  scans.pcd
tools/maps/: clean_pgm_obstacles.py  indoor_map.pgm  indoor_map.yaml  indoor_map_cleaned.pgm  indoor_map_cleaned.yaml  indoor_map_walls.yaml  indoor_wall_only.pgm
